Getting setup. Gulp works

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "Ghost newsletter theme for joelgoodman.co",
     "version": "1.1.0",
     "engines": {
+        "node" : ">=14.0.0",
         "ghost": ">=4.0.0",
         "ghost-api": "v4"
     },
@@ -10,6 +11,33 @@
     "author": {
         "name": "Joel Goodman",
         "email": "hello@joelgoodman.co"
+    },
+    "gpm": {
+        "type": "theme",
+        "categories": [
+            "Minimal",
+            "Newsletter"
+        ]
+    },
+    "keywords": [
+        "ghost",
+        "theme",
+        "ghost-theme"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/joelgoodman/jgg-ghost.git"
+    },
+    "scripts": {
+        "dev": "gulp",
+        "zip": "gulp zip",
+        "test": "gscan .",
+        "test:ci": "gscan --fatal --verbose .",
+        "pretest": "gulp build",
+        "preship": "yarn test",
+        "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; else echo \"Uncomitted changes found.\" && exit 1; fi",
+        "postship": "git fetch && gulp release",
+        "start": "npm run dev"
     },
     "config": {
         "posts_per_page": 25,
@@ -26,16 +54,26 @@
         }
     },
     "devDependencies": {
+        "@tryghost/release-utils": "^0.6.12",
         "autoprefixer": "^10.2.5",
+        "beeper": "^2.1.0",
         "cssnano": "^4.1.10",
         "gscan": "^4.0.1",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
         "gulp-livereload": "^4.0.2",
         "gulp-postcss": "^9.0.0",
+        "gulp-sass": "^4.1.0",
         "gulp-uglify": "^3.0.2",
         "gulp-zip": "^5.1.0",
+        "inquirer": "^8.0.0",
         "postcss": "^8.2.8",
+        "pump": "^3.0.0",
         "sass": "^1.32.8"
+    },
+    "renovate": {
+        "extends": [
+            "@tryghost:theme"
+        ]
     }
 }
