--- a/routes.yaml
+++ b/routes.yaml
@@ -1,4 +1,7 @@
 routes:
+  /:
+    data: page.home
+    template: home
   /subscribe/: members/subscribe
   /signup/: members/signup
   /signin/: members/signin
@@ -6,10 +9,8 @@ routes:
   /upgrade/: members/upgrade
 
 collections:
-  /:
-    permalink: /{slug}/
+  /letters/:
+    permalink: /letters/{slug}/
     template: index
 
 taxonomies:
-  tag: /tag/{slug}/
-  author: /author/{slug}/
